# ascent

./: .gitignore  README.md  pyproject.toml
docs/plans/: ascent.md
docs/prs/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
src/ascent/: __init__.py  __main__.py
src/ascent/core/: __init__.py  cards.py  combat.py  content.py  effects.py  entities.py  intents.py  map.py  rng.py  run.py  save.py
src/ascent/ui/: __init__.py  app.py  combat_view.py
tests/: conftest.py  test_cli.py  test_headless.py
tests/core/: test_combat.py  test_content.py  test_effects.py  test_entities.py  test_layering.py  test_map.py  test_rng.py  test_run.py  test_save.py
tests/ui/: test_combat_view.py  test_smoke.py
